# hotels-test-task

./: .gitignore  Dockerfile  app.py  docker-compose.yml  pyproject.toml  tests.py
